remove line number for code.method.caller trace attribute